# Hackathon-2-todo-phase-1

./: .gitignore  README.md  constitution.md  implementation.md
hack-claude/: CLAUDE.md  README.md  implementation.md  main.py  pyproject.toml
hack-claude/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html  z_33ea1954bbe60e2e___init___py.html  z_33ea1954bbe60e2e_task_service_py.html  z_532385f02888fdd3___init___py.html  z_532385f02888fdd3_task_py.html  z_6156a86a215061be___init___py.html  z_6156a86a215061be_validators_py.html  z_d8dae034b85f0cf9___init___py.html  z_d8dae034b85f0cf9_cli_py.html
hack-claude/specs_history/: 01-specification.md  02-implementation-plan.md  03-tasks.md
hack-claude/src/: __init__.py  main.py
hack-claude/src/models/: __init__.py  task.py
hack-claude/src/services/: __init__.py  task_service.py
hack-claude/src/ui/: __init__.py  cli.py
hack-claude/src/utils/: __init__.py  validators.py
hack-claude/tests/: test_cli.py  test_integration.py  test_task.py  test_task_service.py  test_validators.py
specs_history/: 01-specification.md  02-implementation-plan.md  03-tasks.md
src/: __init__.py  main.py
src/models/: __init__.py  task.py
src/services/: task_service.py
src/ui/: __init__.py  cli.py
src/utils/: validators.py
tests/: test_cli.py  test_integration.py  test_task.py  test_task_service.py  test_validators.py
